# blacksmith

./: .clangd  .gitignore  BUILDING.md  LICENSE  meson.build  meson_amd64.ini  meson_options.txt
lib/c/: blacksmith.h
lib/rust/: Cargo.toml  build.rs
lib/rust/src/: hooks.rs  lib.rs  sys.rs
tools/: init_vscode.py  setup_git_hooks.py  update_git.py
tools/repo/: post-merge
